--- a/about.html
+++ b/about.html
@@ -25,6 +25,20 @@
                Contact Us
            </button>
        </a>
+       <img id="menu" onclick="document.getElementById('demo').style.display='flex'" src="./assets/menu.svg" alt="">
+       <div id="demo" class="mobile_menu">
+           <div onclick="document.getElementById('demo').style.display='none'" class="cancel_div">
+               <img class="cancel" src="./assets/x.svg" alt="">
+           </div>
+           <a href="./">Home</a>
+           <a href="#services">Our services</a>
+           <a href="./about.html">About us</a>
+           <a href="./contact.html">
+               <button >
+                   Contact Us
+               </button>
+           </a>
+       </div>
     </section>
     <section class="banner">
         <div class="banner_content about_content">
