--- a/contact.html
+++ b/contact.html
@@ -26,19 +26,26 @@
                 Contact Us
             </button>
         </a>
-        <img id="menu" onclick="document.getElementById('demo').style.display='flex'" src="./assets/menu.svg" alt="">
-        <div id="demo" class="mobile_menu">
-            <div onclick="document.getElementById('demo').style.display='none'" class="cancel_div">
-                <img class="cancel" src="./assets/x.svg" alt="">
+        <div class="phone">
+            <svg class="x" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 220 400" height="400" width="220">
+                <g class="top-bars" stroke-width="4">
+                    <path class="bar bar1" d="M 178,20 H 202" />
+                    <path class="bar bar2" d="M 178,29 H 202" />
+                </g>
+            </svg>
+            <div class="menu-click-area" onclick="document.querySelector('.phone').classList.toggle('active')"></div>
+            
+            <!-- Mobile menu content -->
+            <div class="menu">
+                <a href="./">Home</a>
+                <a href="#services">Our services</a>
+                <a href="./about.html">About us</a>
+                <a href="./contact.html">
+                    <button>
+                        Contact Us
+                    </button>
+                </a>
             </div>
-            <a href="./">Home</a>
-            <a href="#services">Our services</a>
-            <a href="./about.html">About us</a>
-            <a href="./contact.html">
-                <button>
-                    Contact Us
-                </button>
-            </a>
         </div>
     </section>
     <section class="contact">
